# CPTR302-Firmware

./: CMakeLists.txt  Firmware.cs
CPTR302VictoriaPohleHardware.1.0.0/: CPTR302VictoriaPohleHardware.1.0.0.nupkg
